artifacts/day02-admission-control/pod-with-init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-test
spec:
  containers:
  - name: main
    image: localhost:5000/myapp:v1  # Signed
